fix(pro:table): resize one column to make the other columns too narrow (#1276)

--- a/packages/pro/table/style/index.less
+++ b/packages/pro/table/style/index.less
@@ -160,14 +160,14 @@
       height: calc(@table-head-row-height-sm / 2);
     }
   }
-}
 
-.cdk-resizable {
-  &-preview {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 8;
-    border-right: @border-width-sm @border-style #d1d1d1;
+  .cdk-resizable {
+    &-preview {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 8;
+      border-right: 2px @border-style #d1d1d1;
+    }
   }
 }
